[gd_scene load_steps=18 format=2]

[ext_resource path="res://Sprites/emote/BottomBubble.png" type="Texture" id=1]
[ext_resource path="res://Fonts/Roboto-MediumItalic.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Styles/Master Theme.tres" type="Theme" id=3]
[ext_resource path="res://Sprites/reactions/STONE_REPLY_COAL_REPLY_STONE_HAPPY.png" type="Texture" id=4]
[ext_resource path="res://Fonts/Roboto-BlackItalic.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Prefabs/NewLORED/Emote.gd" type="Script" id=6]
[ext_resource path="res://Sprites/Menu/View.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Menu/Wheel.png" type="Texture" id=8]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.305882, 0.305882, 0.305882, 1 )
border_width_left = 4
border_width_top = 4
border_color = Color( 1, 1, 1, 0.733333 )
border_blend = true
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 5

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.8, 0.8, 0.8, 1 )
draw_center = false
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=4]
draw_center = false

[sub_resource type="DynamicFont" id=6]
size = 12
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=7]
size = 12
outline_color = Color( 0, 0, 0, 0.6 )
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=11]
draw_center = false

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 1, 1, 1, 0.08 )
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 1, 1, 1, 0.04 )
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 1, 1, 1, 0.0392157 )
draw_center = false

[node name="Emote" type="MarginContainer"]
margin_right = 142.0
margin_bottom = 84.0
rect_min_size = Vector2( 75, 52 )
mouse_filter = 2
size_flags_horizontal = 10
size_flags_vertical = 10
script = ExtResource( 6 )

[node name="bg" type="Panel" parent="."]
unique_name_in_owner = true
margin_right = 142.0
margin_bottom = 84.0
mouse_filter = 2
theme = ExtResource( 3 )
custom_styles/panel = SubResource( 1 )

[node name="bottomBubbleAnchor" type="Panel" parent="bg"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -40.0
margin_top = -2.0
margin_right = -36.0
rect_pivot_offset = Vector2( 1.43617, 1.50656 )
mouse_filter = 2
custom_styles/panel = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="bg/bottomBubbleAnchor"]
modulate = Color( 0.38, 0.38, 0.38, 1 )
show_behind_parent = true
position = Vector2( 5, 7 )
scale = Vector2( 0.164103, 0.164103 )
texture = ExtResource( 1 )

[node name="m" type="MarginContainer" parent="."]
margin_right = 142.0
margin_bottom = 84.0
mouse_filter = 2
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="m"]
margin_left = 10.0
margin_top = 10.0
margin_right = 132.0
margin_bottom = 74.0
mouse_filter = 2

[node name="pose" type="Panel" parent="m/HBoxContainer"]
unique_name_in_owner = true
visible = false
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
mouse_filter = 2
custom_styles/panel = SubResource( 4 )

[node name="sprite" type="Sprite" parent="m/HBoxContainer/pose"]
unique_name_in_owner = true
texture = ExtResource( 4 )
centered = false

[node name="shadow" type="Sprite" parent="m/HBoxContainer/pose/sprite"]
modulate = Color( 0, 0, 0, 1 )
show_behind_parent = true
position = Vector2( 1, 1 )
texture = ExtResource( 4 )
centered = false

[node name="ScrollContainer" type="ScrollContainer" parent="m/HBoxContainer"]
unique_name_in_owner = true
margin_right = 122.0
margin_bottom = 64.0
mouse_filter = 2
size_flags_horizontal = 3
scroll_horizontal_enabled = false

[node name="m" type="MarginContainer" parent="m/HBoxContainer/ScrollContainer"]
margin_right = 110.0
margin_bottom = 64.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0

[node name="label" type="RichTextLabel" parent="m/HBoxContainer/ScrollContainer/m"]
unique_name_in_owner = true
margin_right = 122.0
margin_bottom = 64.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 4
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/italics_font = SubResource( 6 )
custom_fonts/normal_font = SubResource( 7 )
bbcode_enabled = true
bbcode_text = "asfd 1 asdfkj askdj fkajs dfk jaskdf as jklasj dfklj asdkfj kjsfasd f"
text = "asfd 1 asdfkj askdj fkajs dfk jaskdf as jklasj dfklj asdkfj kjsfasd f"
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="info" type="VBoxContainer" parent="m/HBoxContainer"]
unique_name_in_owner = true
visible = false
margin_left = 98.0
margin_right = 122.0
margin_bottom = 64.0
__meta__ = {
"_edit_group_": true
}

[node name="close" type="MarginContainer" parent="m/HBoxContainer/info"]
margin_right = 24.0
margin_bottom = 24.0
mouse_filter = 2
size_flags_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="m/HBoxContainer/info/close"]
margin_right = 24.0
margin_bottom = 24.0

[node name="Panel" type="Panel" parent="m/HBoxContainer/info/close/MarginContainer"]
margin_right = 24.0
margin_bottom = 24.0
rect_min_size = Vector2( 24, 24 )
mouse_filter = 2
size_flags_vertical = 5
custom_styles/panel = SubResource( 11 )

[node name="progress" type="TextureProgress" parent="m/HBoxContainer/info/close/MarginContainer/Panel"]
unique_name_in_owner = true
modulate = Color( 0.584314, 0.584314, 0.584314, 1 )
margin_right = 24.0
margin_bottom = 24.0
value = 90.0
texture_under = ExtResource( 8 )
texture_progress = ExtResource( 8 )
fill_mode = 4
tint_under = Color( 1, 1, 1, 0.07 )

[node name="shadow" type="TextureProgress" parent="m/HBoxContainer/info/close/MarginContainer/Panel/progress"]
self_modulate = Color( 0, 0, 0, 1 )
show_behind_parent = true
margin_left = 1.0
margin_top = 1.0
margin_right = 25.0
margin_bottom = 25.0
value = 90.0
texture_progress = ExtResource( 8 )
fill_mode = 4
tint_under = Color( 1, 1, 1, 0.07 )

[node name="hideIconWish" type="Sprite" parent="m/HBoxContainer/info/close/MarginContainer/Panel"]
texture = ExtResource( 7 )
centered = false

[node name="shadow" type="Sprite" parent="m/HBoxContainer/info/close/MarginContainer/Panel/hideIconWish"]
self_modulate = Color( 0, 0, 0, 1 )
show_behind_parent = true
position = Vector2( 2, 2 )
texture = ExtResource( 7 )
centered = false

[node name="Button" type="Button" parent="m/HBoxContainer/info/close"]
margin_right = 24.0
margin_bottom = 24.0
mouse_default_cursor_shape = 2
theme = ExtResource( 3 )
custom_styles/hover = SubResource( 15 )
custom_styles/pressed = SubResource( 16 )
custom_styles/normal = SubResource( 14 )

[connection signal="mouse_entered" from="m" to="." method="_on_m_mouse_entered"]
[connection signal="mouse_exited" from="m" to="." method="_on_m_mouse_exited"]
[connection signal="value_changed" from="m/HBoxContainer/info/close/MarginContainer/Panel/progress" to="." method="_on_progress_value_changed"]
[connection signal="mouse_entered" from="m/HBoxContainer/info/close/Button" to="." method="_on_Button_mouse_entered"]
[connection signal="pressed" from="m/HBoxContainer/info/close/Button" to="." method="_on_Button_pressed"]
